Image path update on introduction

--- a/git/2_introduction.mdx
+++ b/git/2_introduction.mdx
@@ -48,7 +48,6 @@ In this part, we have learned the basics of Git and Github. We have also learned
 <Card
   title="Next: Git Terminology"
   icon="arrow-right"
-  href="/git/terminology"
->
+  href="/images-git/terminology">
   Learn the common terms used in Git
 </Card>
