--- a/git/3_terminology.mdx
+++ b/git/3_terminology.mdx
@@ -25,7 +25,7 @@ There is a difference between a software on your system vs tracking a particular
 git status
 ```
 
-<img src="/images/chai-aur-git/repo-status.png" alt="Repo Status" />
+<img src="/images-git/repo-status.png" alt="Repo Status" />
 
 Not all folders are meant to be tracked by git. Here we can see that all green folders are projects are getting tracked by git but red ones are not.
 
@@ -66,13 +66,13 @@ commit is a way to save your changes to your repository. It is a way to record y
 
 Usual flow looks like this:
 
-<img src="/images/chai-aur-git/flow.png" alt="Git Flow" />
+<img src="/images-git/flow.png" alt="Git Flow" />
 
 ## Complete git flow
 
 A complete git flow, along with pushing the code to github looks like this:
 
-<img src="/images/chai-aur-git/complete-flow.png" alt="Complete Git Flow" />
+<img src="/images-git/complete-flow.png" alt="Complete Git Flow" />
 
 When you want to track a new folder, you first use `init` command to create a new repository. Then you can use `add` command to add the folder to the repository. After that you can use `commit` command to save the changes. Finally you can use `push` command to push the changes to github. Of course there is more to it but this is the basic flow.
 
