--- a/git/7_managing-history.mdx
+++ b/git/7_managing-history.mdx
@@ -10,7 +10,7 @@ This guide will help you understand how to manage your Git history effectively.
 
 A merge commit is a commit that combines two or more commits into one. It is created when you merge two or more branches into a single branch. The merge commit contains all the changes from the original branches, and it is used to keep the project history clean and easy to understand.
 
-<img src="/git/images-git/merge-commit.png" alt="Merge Commit" />
+<img src="images-git/merge-commit.png" alt="Merge Commit" />
 
 ## Rebase in git
 
@@ -22,7 +22,7 @@ Here's a flow example of using git rebase with all the commands involved:
 
 Suppose you have a feature branch called feature-branch that you want to rebase onto the main branch.
 
-<img src="/git/images-git/git-rebase.png" alt="Rebase" />
+<img src="images-git/git-rebase.png" alt="Rebase" />
 
 
 ### Ensure you are on the branch you want to rebase
@@ -87,11 +87,3 @@ git reset --hard HEAD@{1}
 ## Conclusion
 
 In this guide, we've covered important aspects of managing Git history through rebase and reflog. We've learned how rebase can help maintain a cleaner, more linear project history, and how reflog can help recover lost commits or changes.
-
-<Card
-  title="Next: Collaborate with GitHub"
-  icon="arrow-right"
-  href="/git/github"
->
-  Learn how to use GitHub for collaboration
-</Card>
