--- a/git/5_branches.mdx
+++ b/git/5_branches.mdx
@@ -5,7 +5,7 @@ description: Learn about git branches
 
 Branches are a way to work on different versions of a project at the same time. They allow you to create a separate line of development that can be worked on independently of the main branch. This can be useful when you want to make changes to a project without affecting the main branch or when you want to work on a new feature or bug fix.
 
-<img src="/git/images-git/branches.png" alt="Branches in Git" />
+<img src="images-git/branches.png" alt="Branches in Git" />
 
 Some developers can work on Header, some can work on Footer, some can work on Content, and some can work on Layout. This is a good example of how branches can be used in git.
 
@@ -140,11 +140,3 @@ List all branches means that you are going to see all the branches in your repos
 ## Conclusion
 
 In this section, we have learned about the different types of merges and how to resolve conflicts. We have also learned about the importance of branching and merging in Git and Github.
-
-<Card
-  title="Next: Diff, Stash and Tags"
-  icon="arrow-right"
-  href="/git/diff-stash-tags"
->
-  Learn advanced Git commands
-</Card>
