Add section on creating a repository in GitHubU
Added a section about creating a repository in GitHub.

--- a/git/3_terminology.mdx
+++ b/git/3_terminology.mdx
@@ -51,6 +51,8 @@ This will show you all the settings that you have changed.
 
 ## Creating a repository
 
+## Let's Create a Repository in GitHub
+
 Creating a repository is a process of creating a new folder on your system and initializing it as a git repository. It's just regular folder to code your project, you are just asking git to track it. To create a repository, you can use the following command:
 
 ```bash
