--- a/git/4_branches.mdx
+++ b/git/4_branches.mdx
@@ -137,6 +137,8 @@ git branch
 List all branches means that you are going to see all the branches in your repository.
 
 
+## RAISE PR and MERGE THE CODE
+
 ## Conclusion
 
 In this section, we have learned about the different types of merges and how to resolve conflicts. We have also learned about the importance of branching and merging in Git and Github.
